# jigsaw-python

./: .gitignore  .travis.yml  MANIFEST.in  README.md  build.py  example.py  install_jigsaw.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: cmake.yml  setup.yml
jigsawpy/: __init__.py  bisect.py  certify.py  def_t.py  extrude.py  jig_l.py  jig_t.py  jigsaw.py  libsaw.py  loadjig.py  loadmsh.py  loadprj.py  msh_l.py  msh_t.py  prj_t.py  project.py  savejig.py  savemsh.py  saveprj.py
jigsawpy/parse/: loadgeo.py  saveobj.py  saveoff.py  savevtk.py  savewav.py
jigsawpy/tools/: mathutils.py  meshutils.py  orthoball.py  predicate.py  projector.py  scorecard.py
tests/: case_0_.py  case_1_.py  case_2_.py  case_3_.py  case_4_.py  case_5_.py  case_6_.py  case_7_.py  case_8_.py
