[tool.poetry]
name = "jigsawpy"
version = "1.0.0"
description = "Python interface for the JIGSAW meshing library."
authors = ["Darren Engwirda <d.engwirda@gmail.com>"]
homepage = "https://github.com/dengwirda/"
keywords = ["Mesh-generation", "Delaunay", "Voronoi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization"
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
numpy = "^1.25.2"
scipy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install-jigsaw = 'install_jigsaw:run'

[tool.poetry.urls]
"Github" = "https://github.com/dengwirda/"
